# tpau-cpp-kernal

./: .gitignore  CMakeLists.txt  README.md  config.h.in  includes.json  tpau-cpp-kernal-config.cmake.in  tpau-cpp-kernal-uninstalled.pc.in  tpau-cpp-kernal.pc.in  zensical.toml
.github/workflows/: cmake-multi-platform.yml
docs/: License.md  index.md
docs/.overrides/partials/: header.html  nav.html
docs/Explanations/: Symbols.md  index.md
docs/How-To-Guides/: Using-cmake.md  Using-pkg-config.md  index.md
docs/Reference/: Base64Coder.md  Coder.md  Command.md  Commandline.md  DiagnosticOutput.md  Exception.md  FileReader.md  FileSource.md  FlagSet.md  HexCoder.md  Int.md  Location.md  Path.md  SearchPath.md  Symbol.md  SystemEnvironment.md  UTF8.md  Util.md  Value.md  index.md
docs/Tutorials/: Building.md  index.md
docs/assets/styles/: mkdocstrings-doxygen.css  mkdocstrings.css  style.css  tpau.css
lib/: Base64.h  Base64Coder.cc  Base64Coder.h  CMakeLists.txt  Coder.cc  Coder.h  FileReader.h  FileSource.h  HexCoder.cc  HexCoder.h  HexStreamEncoder.h  Int.cc  Symbol.h  Value.cc  Value.h
tests/: CMakeLists.txt  test-base64.cc  test-symbol.cc
tests/programs/: TestCommand.cc  TestCommand.h  command.cc  diagnostic-output.cc  test-base64.cc  test-flagset.cc  test-system-environment.cc
tests/support/: nihtest.conf.in
tests/tests/: diagnostic-output-location.test
tpau-cpp-kernal/: Base64Coder.h  CMakeLists.txt  Coder.cc  Coder.h  Command.cc  Command.h  Commandline.cc  Commandline.h  DiagnosticOutput.cc  DiagnosticOutput.h  Exception.cc  Exception.h  FileReader.cc  FileReader.h  FileSource.cc  FileSource.h  FlagSet.h  HexCoder.h  Int.cc  Int.h  Location.cc  Location.h  LocationException.cc  LocationException.h  Path.cc  Path.h  SearchPath.cc  SearchPath.h  Symbol.cc  Symbol.h  SystemEnvironment.cc  SystemEnvironment.h  UTF8.cc  UTF8.h  Util.cc  Util.h  Value.cc  Value.h  compat.h  printf_like.h
